<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/backgroundGray">

    <Button
        android:id="@+id/adminBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="#00F5F5F7"
        android:text="@string/admin_back_button"
        android:textColor="@color/textGray"
        app:icon="@drawable/button_back_arrow"
        app:iconPadding="4dp"
        app:iconTint="@color/textDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/adminImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="88dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/admin_shield_icon"
        android:contentDescription="@string/admin_login_shield_description"
        />

    <TextView
        android:id="@+id/adminLoginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/admin_access_title"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adminImage" />

    <TextView
        android:id="@+id/adminEmailTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="16dp"
        android:text="@string/admin_login_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adminLoginTitle" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/adminEmailInput"
        android:layout_width="313dp"
        android:layout_height="61dp"
        android:hint="@string/admin_login_hint"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adminEmailTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/adminPasswordTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="20dp"
        android:text="@string/admin_password_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adminEmailInput" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/adminPasswordInput"
        android:layout_width="313dp"
        android:layout_height="61dp"
        android:layout_marginStart="44dp"
        android:hint="@string/admin_password_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adminPasswordTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/adminNotice"
        android:layout_width="313dp"
        android:layout_height="61dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/security_notice_rounded_box"
        android:text="@string/admin_security_notice"
        android:textAlignment="center"
        android:textColor="#B71C1C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adminPasswordInput" />

    <Button
        android:id="@+id/adminAccessButton"
        android:layout_width="313dp"
        android:layout_height="61dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/buttonBlue"
        android:text="@string/admin_access_button"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adminNotice"
        tools:ignore="TextSizeCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>